<resources>
    <string name="app_name">AltijdThuis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Instellingen</string>
    <string name="action_over">Over</string>

    <string name="title_activity_my_preferences">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Pakket verificatie</string>

    <string name="pref_title_postcode">Postcode</string>
    <string name="pref_default_postcode">1000AA</string>

    <string name="pref_title_huisnummer">Huisnummer</string>
    <string name="pref_default_huisnummer">1</string>

    <string name="pref_title_email">Email</string>

    <string name="pref_title_altijdthuisid">AltijdthuisID</string>

    <string name="pref_ringtone_silent">Silent</string>
    <string name="registrer">Registrer</string>
    <string name="setwifi">configureer wifi op de box</string>
    <string name="accesspoint">AltijdthuisAP</string>
    <string name="title_location_permission">Permissie voor wifi</string>
    <string name="text_location_permission">Nodig om de altijdthuisbox te vinden in je netwerk</string>
    <string name="ok">ok</string>
    <string name="default_notification_channel_id">fcm_default_channe</string>
    <string name="msg_token_fmt">Tokentje</string>
    <string name="updatealtijdthuisbox">Update box software</string>

</resources>
