<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
-->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_postcode"
        android:inputType="textCapCharacters"
        android:key="postcode"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_postcode" />

    <EditTextPreference
        android:capitalize="characters"
        android:defaultValue="@string/pref_default_huisnummer"
        android:key="huisnummer"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_huisnummer" />

    <EditTextPreference
        android:capitalize="none"
        android:inputType="textEmailAddress"
        android:key="emailadres"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email" />
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
